# radionets

./: .gitignore  .pre-commit-config.yaml  Makefile  environment.yml  pyproject.toml
docs/: conf.py  index.rst
docs/_static/: radionets.css
docs/api-reference/: index.rst
docs/api-reference/dl_framework/: index.rst
docs/api-reference/dl_framework/architectures/: index.rst
docs/api-reference/dl_framework/callbacks/: index.rst
docs/api-reference/dl_framework/data/: index.rst
docs/api-reference/dl_framework/inspection/: index.rst
docs/api-reference/dl_framework/learner/: index.rst
docs/api-reference/dl_framework/loss_functions/: index.rst
docs/api-reference/dl_framework/model/: index.rst
docs/api-reference/dl_framework/utils/: index.rst
docs/api-reference/dl_training/: index.rst
docs/api-reference/dl_training/scripts/: index.rst
docs/api-reference/dl_training/utils/: index.rst
docs/api-reference/evaluation/: index.rst
docs/api-reference/evaluation/blob_detection/: index.rst
docs/api-reference/evaluation/contour/: index.rst
docs/api-reference/evaluation/dynamic_range/: index.rst
docs/api-reference/evaluation/jet_angle/: index.rst
docs/api-reference/evaluation/jets/: index.rst
docs/api-reference/evaluation/plotting/: index.rst
docs/api-reference/evaluation/utils/: index.rst
docs/api-reference/simulations/: index.rst
docs/developer-guide/: getting-started.rst  index.rst
docs/user-guide/: getting-started.rst  index.rst
examples/: README.rst
radionets/evaluation/: jets.py  plotting.py  utils.py
radionets/simulations/: utils.py
(+13 files in other folders)
