[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "radionets"
description = "Deep learning-based imaging in radio interferometry."
readme = "README.rst"
authors = [
    {name = "radionets developers"},
]
license = {text = "MIT"}

dynamic = ["version"]
requires-python = ">=3.8"
